# oracle_manager

./: CMakeLists.txt  README.md  main.cpp
